# OS_labs

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  README.md
lab1/doc/: 216_Попов_Лаб1.docx
lab1/include/: config.h
lab1/src/: client.c  server.c
lab2/: CMakeLists.txt  README.md  app.c
lab2/doc/: 216_Попов_Лаб2.docx  calc.xlsx
lab2/include/: card_model.h  time_conv.h
lab2/src/: card_model.c  time_conv.c
lab2/tests/: strace_out.txt
lab3/: CMakeLists.txt  README.md
lab3/doc/: 216_Попов_Лаб3.docx
lab3/include/: config.h
lab3/src/: client.c  server.c
lab3/tests/: f1.txt  f2.txt  strace_out.txt
lab4/: README.md  main_compile_link.c  main_runtime_link.c
lab4/doc/: 216_Попов_Лаб4.docx
lab4/include/: library.h
lab4/src/: library_1.c  library_2.c
